--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -9,26 +9,25 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBarExcercise"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:theme="@style/ToolBarTheme"
         android:background="@color/white"
+        android:theme="@style/ToolBarTheme"
+        app:layout_constraintTop_toTopOf="parent"
         app:titleTextColor="@color/colorPrimary"
 
         />
 
     <TextView
+        android:id="@+id/textviewtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-android:id="@+id/textviewtitle"
         android:text="GET READY FOR"
-        android:textSize="22dp"
         android:textColor="@color/colorAcent"
+        android:textSize="22dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/flRestView"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <FrameLayout
         android:id="@+id/flRestView"
@@ -37,23 +36,22 @@ android:id="@+id/textviewtitle"
         android:layout_marginTop="10dp"
         android:background="@drawable/item_circular_color_accent_border"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolBarExcercise"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolBarExcercise">
 
         <ProgressBar
             android:id="@+id/progressbar"
+            style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:background="@drawable/circular_progress_grey"
-            android:progressDrawable="@drawable/circular_progress_bar"
-            android:indeterminate="false"
             android:layout_gravity="center"
+            android:background="@drawable/circular_progress_grey"
+            android:indeterminate="false"
             android:max="10"
             android:progress="100"
-            android:rotation="-90"/>
+            android:progressDrawable="@drawable/circular_progress_bar"
+            android:rotation="-90" />
 
         <LinearLayout
             android:layout_width="60dp"
@@ -61,44 +59,46 @@ android:id="@+id/textviewtitle"
             android:layout_gravity="center"
             android:background="@drawable/item_cicular_color_accent_background"
             android:gravity="center">
+
             <TextView
+                android:id="@+id/texttimer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/texttimer"
                 android:layout_gravity="center"
+                android:background="@drawable/item_cicular_color_accent_background"
                 android:gravity="center"
-                android:textStyle="bold"
                 android:text="10"
-                android:background="@drawable/item_cicular_color_accent_background"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
     </FrameLayout>
 
     <TextView
+        android:id="@+id/tvUpComingLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvUpComingLabel"
         android:text="UPCOMING EXERCISE"
         android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
         android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tvUpCOmingExercise"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toBottomOf="@+id/flRestView"
-        app:layout_constraintBottom_toTopOf="@+id/tvUpCOmingExercise"
-        tools:visibility="visible"/>
+        app:layout_constraintTop_toBottomOf="@+id/flRestView"
+        tools:visibility="visible" />
+
     <TextView
+        android:id="@+id/tvUpCOmingExercise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvUpCOmingExercise"
         android:text="ExerciseName"
         android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
         android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvUpComingLabel"
-        tools:visibility="visible"/>
+        tools:visibility="visible" />
 
 
     <ImageView
@@ -109,47 +109,46 @@ android:id="@+id/textviewtitle"
         android:src="@drawable/running"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/tvExerciseName"
-        app:layout_constraintTop_toBottomOf="@+id/toolBarExcercise"/>
+        app:layout_constraintTop_toBottomOf="@+id/toolBarExcercise" />
 
     <TextView
+        android:id="@+id/tvExerciseName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvExerciseName"
         android:text="ExerciseName"
         android:textColor="@color/colorAcent"
-        android:textStyle="bold"
         android:textSize="22sp"
+        android:textStyle="bold"
         android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/flExerciseView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/flExerciseView"
-        tools:visibility="visible"/>
+        tools:visibility="visible" />
+
     <FrameLayout
         android:id="@+id/flExerciseView"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="10dp"
-        android:visibility="invisible"
-        tools:visibility="gone"
         android:background="@drawable/item_circular_color_accent_border"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivImage"
-        >
+        tools:visibility="gone">
 
         <ProgressBar
             android:id="@+id/progressbarExcercise"
+            style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:background="@drawable/circular_progress_grey"
-            android:progressDrawable="@drawable/circular_progress_bar"
-            android:indeterminate="false"
             android:layout_gravity="center"
+            android:background="@drawable/circular_progress_grey"
+            android:indeterminate="false"
             android:max="30"
             android:progress="300"
-            android:rotation="-90"/>
+            android:progressDrawable="@drawable/circular_progress_bar"
+            android:rotation="-90" />
 
         <LinearLayout
             android:layout_width="60dp"
@@ -157,17 +156,31 @@ android:id="@+id/textviewtitle"
             android:layout_gravity="center"
             android:background="@drawable/item_cicular_color_accent_background"
             android:gravity="center">
+
             <TextView
+                android:id="@+id/texttimerExcercise"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/texttimerExcercise"
                 android:layout_gravity="center"
+                android:background="@drawable/item_cicular_color_accent_background"
                 android:gravity="center"
-                android:textStyle="bold"
                 android:text="30"
-                android:background="@drawable/item_cicular_color_accent_background"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
     </FrameLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvExerciseStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/flExerciseView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteX="2dp"
+        tools:ignore="MissingConstraints"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
